# Zhidao-Jinggang-backend

./: .gitignore  .pre-commit-config.yaml  .project.md  Dockerfile  Makefile  README.md  alembic.ini  cli.py  docker-compose.yml  env.example  nginx.conf  prometheus.yml  pyproject.toml
.VSCodeCounter/2025-08-25_08-37-38/: details.md  diff-details.md  diff.md  diff.txt  results.csv
.devcontainer/: README.md  check-db.sh  connect-db.sh  devcontainer.json  docker-compose.yml  quick-check.sh  start.sh
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  chat.py  items.py  users.py
app/core/: config.py  dependencies.py  exceptions.py  logging.py  middleware.py  security.py
app/db/: __init__.py  base.py  init_db.py  session.py
app/db/models/: __init__.py  chat.py  item.py  user.py
app/db/repositories/: __init__.py  base_repository.py  item_repository.py  user_repository.py
app/schemas/: __init__.py  chat.py  common.py  item.py  user.py
app/services/: __init__.py  chat_service.py  item_service.py  openai_service.py  user_service.py
app/utils/: cache.py  helpers.py  validators.py
migrations/: env.py
scripts/: deploy.sh  start.sh
tests/: conftest.py
tests/api/: test_auth.py  test_items.py
tests/integration/: test_database.py
tests/unit/: test_utils.py
